--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,10 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="preconnect" href="https://rsms.me/">
+  <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
 </head>
-<body class="bg-dark text-primary">
+<body class="bg-grey text-primary antialiased leading-relaxed mx-80">
   <tr-root></tr-root>
 </body>
 </html>
