Update navbar. Add global service with signal.

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   <link rel="preconnect" href="https://rsms.me/">
   <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
 </head>
-<body class="bg-grey text-primary antialiased leading-relaxed mx-60">
+<body class="bg-grey text-light_grey antialiased leading-relaxed mx-60">
   <tr-root></tr-root>
 </body>
 </html>
