--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
   <title>Taylor Ray - Web Developer Portfolio</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Taylor Ray is a web developer currently consulting for DVT." />
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="preconnect" href="https://rsms.me/">
   <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
