Add some mobile responsiveness

--- a/src/index.html
+++ b/src/index.html
@@ -5,12 +5,12 @@
   <title>Taylor Ray - Web Developer Portfolio</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Taylor Ray is a web developer currently consulting for DVT." />
+  <meta name="description" content="Taylor Ray is a software developer who loves all things web. He is currently consulting for DVT as an intermediate web developer." />
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="preconnect" href="https://rsms.me/">
   <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
 </head>
-<body class="bg-grey text-light_grey antialiased leading-relaxed mx-60">
+<body class="bg-grey text-light_grey antialiased leading-relaxed mx-10 lg:mx-60">
   <tr-root></tr-root>
 </body>
 </html>
