Add back to top button

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
   <link rel="preconnect" href="https://rsms.me/">
   <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
 </head>
-<body class="bg-grey text-light_grey antialiased leading-relaxed mx-10 lg:mx-60">
+<body id="top" class="bg-grey text-light_grey antialiased leading-relaxed mx-10 lg:mx-60">
   <tr-root></tr-root>
 </body>
 </html>
