--- a/src/index.html
+++ b/src/index.html
@@ -1,16 +1,16 @@
 <!doctype html>
-<html lang="en" class="scroll-smooth">
+<html class="scroll-smooth" lang="en">
 <head>
   <meta charset="utf-8">
   <title>Taylor Ray - Web Developer Portfolio</title>
   <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Taylor Ray is a software developer who loves all things web. He is currently consulting for DVT as an intermediate web developer." />
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="preconnect" href="https://rsms.me/">
-  <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
+  <meta content="width=device-width, initial-scale=1" name="viewport">
+  <meta content="Taylor Ray is a software developer who loves all things web. He is currently consulting for DVT as an intermediate web developer." name="description"/>
+  <link href="favicon.ico" rel="icon" type="image/x-icon">
+  <link href="https://rsms.me/" rel="preconnect">
+  <link href="https://rsms.me/inter/inter.css" rel="stylesheet">
 </head>
-<body id="top" class="bg-grey text-light_grey antialiased leading-relaxed mx-10 lg:mx-60">
-  <tr-root></tr-root>
+<body class="bg-dark_blue text-primary antialiased leading-relaxed mx-10 lg:mx-60" id="top">
+<tr-root></tr-root>
 </body>
 </html>
