Minor visual and content updates

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
   <link href="https://rsms.me/" rel="preconnect">
   <link href="https://rsms.me/inter/inter.css" rel="stylesheet">
 </head>
-<body class="bg-dark_blue text-primary antialiased leading-relaxed mx-10 lg:mx-60" id="top">
+<body class="bg-dark_blue text-primary antialiased leading-relaxed mx-10 lg:mx-40 2xl:mx-60" id="top">
 <tr-root></tr-root>
 </body>
 </html>
