--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,8 @@
   <link href="https://rsms.me/" rel="preconnect">
   <link href="https://rsms.me/inter/inter.css" rel="stylesheet">
 </head>
-<body class="bg-dark_blue text-primary antialiased leading-relaxed" id="top">
+<!-- <body class="bg-dark_blue text-primary antialiased leading-relaxed" id="top"> -->
+<body class="bg-gradient-to-r from-dark_blue via-dark_blue_variant to-dark_blue via-50%  text-primary antialiased leading-relaxed" id="top">
 <tr-root></tr-root>
 </body>
 </html>
