Minor visual updates & cleanup

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html class="scroll-smooth" lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Taylor Ray - Web Developer Portfolio</title>
+  <title>Taylor Ray - Software Developer Portfolio</title>
   <base href="/">
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <meta content="Taylor Ray is a software developer who loves all things web. He is currently consulting for DVT as an intermediate web developer." name="description"/>
