--- a/src/index.html
+++ b/src/index.html
@@ -1,17 +1,47 @@
-<!doctype html>
+<!DOCTYPE html>
 <html class="scroll-smooth" lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>Taylor Ray - Software Developer Portfolio</title>
-  <base href="/">
-  <meta content="width=device-width, initial-scale=1" name="viewport">
-  <meta content="Taylor Ray is a software developer who loves all things web. He is currently consulting for DVT as an intermediate web developer." name="description"/>
-  <link href="favicon.ico" rel="icon" type="image/x-icon">
-  <link href="https://rsms.me/" rel="preconnect">
-  <link href="https://rsms.me/inter/inter.css" rel="stylesheet">
-</head>
-<!-- <body class="bg-dark_blue text-primary antialiased leading-relaxed" id="top"> -->
-<body class="bg-gradient-to-r from-dark_blue via-dark_blue_variant to-dark_blue via-50% text-primary antialiased leading-relaxed" id="top">
-<tr-root></tr-root>
-</body>
+  <head>
+    <!-- Google Tag Manager -->
+    <script>
+      (function (w, d, s, l, i) {
+        w[l] = w[l] || [];
+        w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
+        var f = d.getElementsByTagName(s)[0],
+          j = d.createElement(s),
+          dl = l != "dataLayer" ? "&l=" + l : "";
+        j.async = true;
+        j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
+        f.parentNode.insertBefore(j, f);
+      })(window, document, "script", "dataLayer", "GTM-PBTL4T3H");
+    </script>
+    <!-- End Google Tag Manager -->
+    <meta charset="utf-8" />
+    <title>Taylor Ray - Software Developer Portfolio</title>
+    <base href="/" />
+    <meta content="width=device-width, initial-scale=1" name="viewport" />
+    <meta
+      content="Taylor Ray is a software developer who loves all things web. He is currently consulting for DVT as an intermediate web developer."
+      name="description"
+    />
+    <link href="favicon.ico" rel="icon" type="image/x-icon" />
+    <link href="https://rsms.me/" rel="preconnect" />
+    <link href="https://rsms.me/inter/inter.css" rel="stylesheet" />
+  </head>
+  <!-- <body class="bg-dark_blue text-primary antialiased leading-relaxed" id="top"> -->
+  <body
+    class="bg-gradient-to-r from-dark_blue via-dark_blue_variant to-dark_blue via-50% text-primary antialiased leading-relaxed"
+    id="top"
+  >
+    <!-- Google Tag Manager (noscript) -->
+    <noscript
+      ><iframe
+        src="https://www.googletagmanager.com/ns.html?id=GTM-PBTL4T3H"
+        height="0"
+        width="0"
+        style="display: none; visibility: hidden"
+      ></iframe
+    ></noscript>
+    <!-- End Google Tag Manager (noscript) -->
+    <tr-root></tr-root>
+  </body>
 </html>
